--- a/frontend/src/screens/Dashboard.css
+++ b/frontend/src/screens/Dashboard.css
@@ -23,6 +23,10 @@
 .profile-link {
 	color: black;
 	text-decoration: none;
+	display: flex;
+	align-items: center;
+	gap: 5px;
+	width: min-content;
 }
 
 .content {
@@ -33,4 +37,17 @@
 
 li {
   list-style: none;
+}
+
+.settings {
+	display: flex;
+	align-items: center;
+	gap: 5px;
+}
+
+.copyright {
+	font-size: .8rem;
+	display: flex;
+	justify-content: center;
+	color: rgb(148, 148, 148);
 }
