--- a/frontend/src/features/tasks/TaskSection.css
+++ b/frontend/src/features/tasks/TaskSection.css
@@ -1,6 +1,6 @@
 .task-section {
   height: 100vh;
-  width: 40vw;
+  /* width: 100%; */
   /* border: 1px solid black; */
   padding: 10px;
   display: flex;
