--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -14,7 +14,8 @@
 
 a {
   color: darkblue;
-  /* text-decoration: none; */
+  text-decoration: none;
+  color: black;
 }
 
 .active {
@@ -22,9 +23,13 @@ a {
 }
 
 /* Header */
+.navi {
+  box-shadow: 0 0 3px 3px rgba(194, 41, 41, 0.8);
+}
+
 .nav-sections {
   min-height: 60px;
-  background: darkgray;
+  background: white;
   display: grid;
   align-items: center;
   grid-template-columns: 1fr 1fr;
@@ -38,14 +43,31 @@ a {
   display: flex;
   gap: 20px;
   justify-self: flex-end;
+  align-items: center;
   margin-right: 100px;
 }
 
-.hero {
-  min-height: calc(100vh - 60px);
-  background: #eee;
+.signup-btn {
+  background: black;
+  color: white;
+  border: none;
+  border-radius: 3px;
+  padding: 10px 20px;
+}
+
+.signin-btn {
+  color: black;
+  border: none;
+  border-radius: 3px;
+  padding: 10px 20px;
+}
+
+footer {
+  padding-top: 100px;
+  max-width: 1000px;
+  margin: auto;
   display: flex;
-  flex-direction: column;
-  align-items: center;
   justify-content: center;
 }
+
+
